--- a/website-ui/package.json
+++ b/website-ui/package.json
@@ -1,43 +1,38 @@
 {
-  "name": "website-ui",
-  "version": "0.0.0",
+  "name": "@platforms-code/design-system",
+  "version": "1.0.0",
+  "description": "Framework-agnostic design system with CSS tokens and component styles",
+  "type": "module",
+  "main": "src/index.css",
+  "files": [
+    "src/**/*",
+    "docs/**/*",
+    "README.md"
+  ],
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "dev": "npx serve . -p 3000 --no-clipboard",
+    "preview": "npx serve docs -p 3000 --no-clipboard",
+    "lint:css": "echo 'CSS linting not configured - add stylelint if needed'",
+    "format": "prettier --write \"src/**/*.{css,html}\" \"docs/**/*.{html,css}\""
+  },
+  "keywords": [
+    "design-system",
+    "css",
+    "design-tokens",
+    "components",
+    "framework-agnostic",
+    "bem",
+    "rtl"
+  ],
+  "author": "Platforms Code",
+  "license": "MIT",
+  "devDependencies": {
+    "prettier": "^3.1.0"
   },
   "prettier": {
     "printWidth": 100,
     "singleQuote": true,
-    "overrides": [
-      {
-        "files": "*.html",
-        "options": {
-          "parser": "angular"
-        }
-      }
-    ]
-  },
-  "private": true,
-  "packageManager": "npm@11.6.2",
-  "dependencies": {
-    "@angular/common": "^21.0.0",
-    "@angular/compiler": "^21.0.0",
-    "@angular/core": "^21.0.0",
-    "@angular/forms": "^21.0.0",
-    "@angular/platform-browser": "^21.0.0",
-    "@angular/router": "^21.0.0",
-    "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
-  },
-  "devDependencies": {
-    "@angular/build": "^21.0.4",
-    "@angular/cli": "^21.0.4",
-    "@angular/compiler-cli": "^21.0.0",
-    "jsdom": "^27.1.0",
-    "typescript": "~5.9.2",
-    "vitest": "^4.0.8"
+    "tabWidth": 2,
+    "useTabs": false
   }
 }
